Forced height inherit property to display slider images in chrome

--- a/weddingcart/public/css/newstyle.css
+++ b/weddingcart/public/css/newstyle.css
@@ -343,7 +343,7 @@
 
           .divslidr
           {
-           height: inherit;
+           height: inherit !important;
           }
 
       .divslidflex
