--- a/weddingcart/public/css/style.css
+++ b/weddingcart/public/css/style.css
@@ -13328,7 +13328,9 @@ th .btn{
 .multiGrid
 {
 	font-size: 0.8em;
-	border: solid 1px #FF2F00;
+	border: solid 1px #ADADAD;
+    background-color: #F9F9F9;
+    color: #333333;
 	padding-top: 10px;
 }
 
@@ -13355,21 +13357,29 @@ th .btn{
 
 .multiGrid .updateRow,
 .multiGrid .addGuest,
-#addRow
+.btn-add
 {
 	color: #39FF14;
 }
 
-#addRow
+.btn-add
 {
-	height: 20px;
-	width: 20px;
-	padding-top: 2px;
-	padding-bottom: 2px;
+	height: 20px !important;
+	width: 20px !important;
+	padding-top: 2px !important;
+	padding-bottom: 2px !important;
+	text-align: center !important;
+	vertical-align: middle !important;
 }
 
 #addRow span
 {
-	text-align: right;
-	vertical-align: top;
+	position: relative;
+	top: -2px;
+	left: 1px;
+}
+
+.multiGrid .btn:hover
+{
+	font-size: 1.5em;
 }
