--- a/weddingcart/public/css/style.css
+++ b/weddingcart/public/css/style.css
@@ -13383,3 +13383,83 @@ th .btn{
 {
 	font-size: 1.5em;
 }
+
+/*
+------------ Typeahead CLasses ----------------
+*/
+
+.twitter-typeahead {
+	display: inherit !important;
+}
+
+.typeahead,
+.invite-form,
+.tt-query,
+.tt-hint {
+	/*width: 396px;*/
+	/*height: 30px;*/
+	/*padding: 8px 12px;*/
+	line-height: 30px;
+	border: 2px solid #ccc;
+	/*-webkit-border-radius: 8px;*/
+	/*-moz-border-radius: 8px;*/
+	/*border-radius: 8px;*/
+	outline: none;
+}
+
+.typeahead {
+	background-color: #fff;
+}
+
+.typeahead:focus {
+	border: 2px solid #FF2F00;
+}
+
+.tt-query {
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.tt-hint {
+	color: #999
+}
+
+.tt-menu
+{
+	width: 422px;
+	margin-top: 12px;
+	padding: 8px 0;
+	background-color: #fff;
+	border: 1px solid #ccc;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+	box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion,
+.empty-message {
+	padding: 3px 20px;
+	/*font-size: 18px;*/
+	font-size: 1.1em;
+	line-height: 24px;
+}
+
+.tt-suggestion.tt-cursor {
+	color: #fff;
+	background-color: #0097cf;
+
+}
+
+.tt-suggestion p {
+	margin: 0;
+}
+.empty-message
+{
+	color:red;
+
+}
