--- a/weddingcart/public/css/style.css
+++ b/weddingcart/public/css/style.css
@@ -13383,7 +13383,28 @@ th .btn{
 {
 	font-size: 1.5em;
 }
+.message-div {
+	text-align: center;
+	margin-top: 10px;
 
+}
+
+/*.message-div ul{*/
+/*list-style-position: inside;*/
+	/*list-style-type: "!";*/
+	/*padding-left: 50px;*/
+	/*font-size: 1.1em;*/
+/*}*/
+
+.message-div li i{
+	left: 0px;
+}
+
+.error{
+	border-color: #a94442;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
 /*
 ------------ Typeahead CLasses ----------------
 */
