--- a/weddingcart/public/css/style.css
+++ b/weddingcart/public/css/style.css
@@ -172,7 +172,7 @@ small { font-family: 'Lato', sans-serif; }
 	border-top: 1px solid #EEE;
 }
 
-.line.line-sm { margin: 30px 0; }
+.line.line-sm { margin: 10px 0; }
 
 span.middot {
 	display: inline-block;
@@ -1966,7 +1966,7 @@ body.top-search-open #side-panel-trigger { opacity: 0; }
 	top: 0;
 	left: 0;
 	width: 100%;
-	background-color: #CE0414;
+	background-color: #E3E3E3;
 	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
@@ -8948,7 +8948,7 @@ body:not(.device-touch) .social-icon i {
 	line-height: 64px;
 }
 
-.accordion.accordion-lg .acc_content { padding: 10px 0 30px 30px; }
+.accordion.accordion-lg .acc_content { padding: 10px 0 10px 30px; }
 
 
 /* ----------------------------------------------------------------
