--- a/weddingcart/public/css/style.css
+++ b/weddingcart/public/css/style.css
@@ -1976,9 +1976,9 @@ body.top-search-open #side-panel-trigger { opacity: 0; }
 	/*background-color: #CE0414;*/
 /*}*/
 
-#header{
-	background-color: #F8AF14;
-}
+/*#header{*/
+	/*background-color: #F8AF14;*/
+/*}*/
 
 #header.sticky-header:not(.static-sticky),
 #header.sticky-header:not(.static-sticky) #header-wrap,
@@ -3425,7 +3425,7 @@ body.stretched .container-fullwidth .breadcrumb { right: 60px !important; }
 .content-wrap {
 	position: relative;
 	padding: 80px 0;
-	background-color: #F8AF14;
+	/*background-color: #F8AF14;*/
 }
 
 #content .container { position: relative; }
